--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "PokeDex",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "pokeapi.py",
+            "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
             "VariablePresentation": { 
