Final main script

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,8 @@
             "VariablePresentation": { 
                 "all": "Hide",
                 "protected": "inline"
-            }
+            },
+            "args": ["45"]
         }
     ]
 }
